Fix overflow issue.

--- a/refinery/ui/source/styles/refinery-style.less
+++ b/refinery/ui/source/styles/refinery-style.less
@@ -1053,7 +1053,6 @@ a.analysis-header {
 
     ul.results {
       position: relative;
-      z-index: 1;
       background: @white;
 
       li {
@@ -1092,7 +1091,7 @@ a.analysis-header {
 
         .zoomOut {
           position: absolute;
-          z-index: 2;
+          z-index: 1;
           top: 0;
           right: 20px;
           bottom: 0;
